--- a/notes/00_cheat_sheet.ipynb
+++ b/notes/00_cheat_sheet.ipynb
@@ -59,7 +59,7 @@
     "* $$E = \\frac{\\hbar^2 k^2}{2m}$$\n",
     "\n",
     "\n",
-    "### Square well potential\n",
+    "### Square well potential (Infinite)\n",
     "\n",
     "* $V(x) = 0$ for $|x| < a$ and $V(x) = \\infty$ for $|x| > a$\n",
     "* Wavefunction:\n",
@@ -73,9 +73,11 @@
     "* Wavefunction:\n",
     "  $$\\psi_0(x) = \\left( \\frac{m \\omega}{\\pi \\hbar} \\right)^{1/4} e^{-\\frac{m \\omega}{2 \\hbar} x^2}$$\n",
     "* Energy:\n",
-    "  $$E_n = \\left( n + \\frac{1}{2} \\right) \\hbar \\omega$$\n",
-    "* Number operator: $$N = a^\\dagger a$$\n",
-    "* Raising and lowering operators: $$a^\\dagger = \\frac{1}{\\sqrt{2}} \\left( \\frac{\\hat{x}}{\\sqrt{\\hbar m \\omega}} - i \\frac{\\hat{p}}{\\sqrt{\\hbar m \\omega}} \\right) \\quad a = \\frac{1}{\\sqrt{2}} \\left( \\frac{\\hat{x}}{\\sqrt{\\hbar m \\omega}} + i \\frac{\\hat{p}}{\\sqrt{\\hbar m \\omega}} \\right)$$\n",
+    "  $$E_n = \\left( n + \\frac{1}{2} \\right) \\hbar \\omega, \\Rightarrow \\hat H = \\hbar \\omega \\left( a^\\dagger a + \\frac{1}{2} \\right)$$\n",
+    "* Number operator: $$N =\n",
+    " a^\\dagger a$$\n",
+    "* Raising and lowering operators: $$a^\\dagger = \\frac{1}{\\sqrt{2}} \\left( \\frac{\\hat{x}}{\\sqrt{\\hbar m \\omega}} - i \\frac{\\hat{p}}{\\sqrt{\\hbar m \\omega}} \\right), \\quad a = \\frac{1}{\\sqrt{2}} \\left( \\frac{\\hat{x}}{\\sqrt{\\hbar m \\omega}} + i \\frac{\\hat{p}}{\\sqrt{\\hbar m \\omega}} \\right)$$\n",
+    "  $$\\hat x = \\sqrt{\\frac{\\hbar}{2 m \\omega}} (a + a^\\dagger), \\quad \\hat p = i \\sqrt{\\frac{\\hbar m \\omega}{2}} (a^\\dagger - a)$$\n",
     "* Commutation relation: $$[a, a^\\dagger] = 1, \\quad [\\hat{x}, \\hat{p}] = i \\hbar$$\n",
     "* Recursive relations: $$\\ket{n} = \\frac{1}{\\sqrt{n!}} (a^\\dagger)^n \\ket{0}$$\n",
     "* Eigenvalues:\n",
