--- a/notes/00_cheat_sheet.ipynb
+++ b/notes/00_cheat_sheet.ipynb
@@ -14,14 +14,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Formalism\n",
+    "---\n",
+    "\n",
+    "# Formalism\n",
     "* The commutator: $$[A,B] = AB - BA$$\n",
     "* Hermitean conjugate: $$A^\\dagger = (A^T)^*$$\n",
     "* When two functions are orthogonal, their inner product is zero: $$\\langle f | g \\rangle = 0 \\Rightarrow \\int \\psi_m^* \\psi_n dx = \\delta_{mn}$$\n",
@@ -46,7 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Particles in potentials"
+    "---\n",
+    "# Particles in potentials"
    ]
   },
   {
@@ -83,16 +79,15 @@
     "* Eigenvalues:\n",
     "  $$a \\ket{n} = \\sqrt{n} \\ket{n-1} \\quad a^\\dagger \\ket{n} = \\sqrt{n+1} \\ket{n+1}$$\n",
     "\n",
-    "### The hydrogen atom\n",
+    "#### Coherent states:\n",
     "\n",
-    "* $V(r) = - \\frac{e^2}{4 \\pi \\epsilon_0 r}$\n",
-    "* $E_n = - \\frac{e^2}{2a_0} \\frac{1}{n^2} \\approx -13.6 \\frac{1}{n^2} \\text{eV}$\n",
-    "* Transition rules: $\\Delta l = \\pm 1, \\Delta m = 0, \\pm 1$\n",
+    "* Definition: $$\\ket{\\alpha} = e^{-\\frac{|\\alpha|^2}{2}} \\sum_{n=0}^\\infty \\frac{\\alpha^n}{\\sqrt{n!}} \\ket{n} \\quad \\Rightarrow a \\ket{\\alpha} = \\alpha \\ket{\\alpha}$$\n",
+    "\n",
     "\n",
     "### Angular momentum basics\n",
     "\n",
-    "* CSCO: $\\{J^2, J_z\\}$\n",
-    "* Commutation relations: $[J_i, J_j] = i \\hbar \\epsilon_{ijk} J_k$\n",
+    "* CSCO: $$\\{J^2, J_z\\}$$\n",
+    "* Commutation relations: $$[J_i, J_j] = i \\hbar \\epsilon_{ijk} J_k$$\n",
     "* Eigenvalues: $$J^2 \\ket{j,m} = \\hbar^2 j(j+1) \\ket{j,m}$$ $$J_z \\ket{j,m} = \\hbar m \\ket{j,m}$$\n",
     "* Anihillation: $$J_{\\pm} \\ket{j,m} = \\hbar \\sqrt{j(j+1) - m(m \\pm 1)} \\ket{j,m \\pm 1}$$\n",
     "* Total momentum:\n",
@@ -100,6 +95,40 @@
     "* Raising and lowering operators:\n",
     "    $$J_+ = J_x + i J_y,\\quad J_- = J_x - i J_y$$\n",
     "    $$J_x = \\frac{1}{2} (J_+ + J_-),\\quad J_y = \\frac{1}{2i} (J_+ - J_-)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Central problems\n",
+    "\n",
+    "* $$\\nabla^2 = \\frac{1}{r^2} \\frac{\\partial}{\\partial r} \\left( r^2 \\frac{\\partial}{\\partial r} \\right) + \\frac{1}{r^2 \\sin \\theta} \\frac{\\partial}{\\partial \\theta} \\left( \\sin \\theta \\frac{\\partial}{\\partial \\theta} \\right) + \\frac{1}{r^2 \\sin^2 \\theta} \\frac{\\partial^2}{\\partial \\phi^2}$$\n",
+    "* $$\\Bigg [-\\frac{\\hbar^2}{2mr^2} \\frac{\\partial}{\\partial r} \\left( r^2 \\frac{\\partial}{\\partial r} \\right) + \\frac{L^2}{2mr^2} + V(r)\\Bigg ] \\psi = E\\psi$$\n",
+    "* Effecttive Potential: $$V_{eff}(r) = V(r) + \\frac{L^2}{2mr^2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The hydrogen atom\n",
+    "\n",
+    "* $$V(r) = - \\frac{e^2}{4 \\pi \\epsilon_0 r}$$\n",
+    "* $$E_n = - \\frac{e^2}{2a_0} \\frac{1}{n^2} \\approx -13.6 \\frac{1}{n^2} \\text{eV}$$\n",
+    "* Transition rules: $$\\Delta l = \\pm 1, \\Delta m = 0, \\pm 1$$\n",
+    "\n",
+    "#### Fine structure\n",
+    "\n",
+    "* Spin orbit coupling: $$\\quad H_{SO} = \\frac{e}{4 \\pi \\epsilon_0 m_e^2 c^3} \\frac{1}{r^3} \\vec{L} \\cdot \\vec{S}$$\n",
+    "* Relativistic correction: $$\\quad H_{rel} = - \\frac{p^4}{8 m_e^3 c^2}$$\n",
+    "* Utils:\n",
+    "  \n",
+    "  $$\\braket{r^{-3}} = \\frac{1}{l(l+1/2)(l+1)n^3a^3}$$\n",
+    "  $$\\braket{r^{-1}} = \\frac{1}{n^2a}$$\n",
+    "  $$\\braket{r^{-2}} = \\frac{1}{l(l+1)n^2a^2}$$\n",
+    "  $$B = \\frac{\\mu_0 I}{2 \\pi r} = \\frac{\\mu_0 e}{4 \\pi r^3}$$\n",
+    "  $$\\braket{\\psi | p^4 | \\psi} = \\braket{p^2\\psi|p^2 \\psi}, \\text{ From Schrödinger equation} \\quad -\\frac{1}{2m} p^2 \\psi = (E - V) \\psi$$\n"
    ]
   },
   {
@@ -207,18 +236,14 @@
    "source": [
     "* $$\\sigma_{\\text{Total}} = \\int_0^{\\pi} \\int_0^{2\\pi} \\sigma(\\theta, \\phi) \\sin(\\theta) d\\theta d\\phi$$\n",
     "  \n",
-    "### Born Approximation\n",
-    "\n",
-    "**WEAK POTENTIALS**\n",
+    "### Born Approximation (**WEAK POTENTIALS**)\n",
     "\n",
     "* $$q = \\vec{k}_f - \\vec{k}_i = 2 k \\sin(\\theta/2)$$\n",
     "* $$f = \\frac{-\\mu}{2\\pi\\hbar^2} \\int_0^{\\infty} V(r) e^{iqr} r^2 dv$$\n",
     "* $$\\sigma(\\theta) = |f|^2$$\n",
     "* Spherical potentials: $$f = \\frac{-2\\mu}{\\hbar^2} \\int_0^{\\infty} r V \\sin(qr) dr$$\n",
     "\n",
-    "### Partial Wave Analysis\n",
-    "\n",
-    "**SPHERICALLY SYMMETRIC POTENTIALS**\n",
+    "### Partial Wave Analysis (**SPHERICALLY SYMMETRIC POTENTIALS**)\n",
     "\n",
     "* $$f(\\theta) = \\frac{1}{k} \\sum_{l=0}^{\\infty} (2l+1) e^{i\\delta_l} \\sin(\\delta_l) P_l(\\cos(\\theta))$$\n",
     "* $$\\sigma(\\theta) = |f(\\theta)|^2 = \\frac{1}{k^2} \\sum_{l=0}^{\\infty} (2l+1) \\sin^2(\\delta_l)$$"
