Relation for pauli matrices

--- a/notes/00_cheat_sheet.ipynb
+++ b/notes/00_cheat_sheet.ipynb
@@ -153,8 +153,11 @@
     "  * $$\\sigma_x = \\begin{pmatrix} 0 & 1 \\\\ 1 & 0 \\end{pmatrix}$$\n",
     "  * $$\\sigma_y = \\begin{pmatrix} 0 & -i \\\\ i & 0 \\end{pmatrix}$$\n",
     "  * $$\\sigma_z = \\begin{pmatrix} 1 & 0 \\\\ 0 & -1 \\end{pmatrix}$$\n",
+    "* Relation between matrices:\n",
+    "    $$\\sigma_j \\sigma_k = \\delta_{jk} \\mathbb{1} + i \\epsilon_{jkl} \\sigma_l$$\n",
     "* Rotations:\n",
     "  * $$R_u(\\alpha) = \\cos(\\alpha/2) \\mathbb{1} - i \\sin(\\alpha/2) \\vec{u} \\cdot \\vec{\\sigma}$$\n",
+    "  * $$e^{ia\\sigma_j} = \\cos(a) \\mathbb{1} + i \\sin(a) \\sigma_j$$\n",
     "\n",
     "## Addition of Angular Momentum\n",
     "\n",
