Add translation operator

--- a/notes/00_cheat_sheet.ipynb
+++ b/notes/00_cheat_sheet.ipynb
@@ -79,6 +79,7 @@
     "* Eigenvalues:\n",
     "  $$a \\ket{n} = \\sqrt{n} \\ket{n-1} \\quad a^\\dagger \\ket{n} = \\sqrt{n+1} \\ket{n+1}$$\n",
     "\n",
+    "* Translation operator: $$T(a) = e^{-i a \\hat{p} / \\hbar}$$\n",
     "#### Coherent states:\n",
     "\n",
     "* Definition: $$\\ket{\\alpha} = e^{-\\frac{|\\alpha|^2}{2}} \\sum_{n=0}^\\infty \\frac{\\alpha^n}{\\sqrt{n!}} \\ket{n} \\quad \\Rightarrow a \\ket{\\alpha} = \\alpha \\ket{\\alpha}$$\n",
