--- a/notes/00_cheat_sheet.ipynb
+++ b/notes/00_cheat_sheet.ipynb
@@ -166,7 +166,7 @@
     "* $$J_1 \\cdot J_2 = \\frac{1}{2} (J^2 - J_1^2 - J_2^2)$$\n",
     "* CSCO: $$\\{H, J^2, J_1^2, J_2^2, J_z\\}$$\n",
     "* $J_z = J_{1z} + J_{2z}$\n",
-    "* $m_min = \\|m_1 - m_2\\|, \\quad m_max = m_1 + m_2$\n",
+    "* $m_{min} = \\|m_1 - m_2\\|, \\quad m_{max} = m_1 + m_2$\n",
     "\n",
     "\n",
     "### Spin oprbit coupling\n",
