--- a/notes/00_cheat_sheet.ipynb
+++ b/notes/00_cheat_sheet.ipynb
@@ -34,7 +34,9 @@
     "* Gaussian Intergral: $$\\int_{-\\infty}^{\\infty} e^{-ax^2} dx = \\sqrt{\\frac{\\pi}{a}}$$\n",
     "* Evolution of observables:\n",
     "    $$\\frac{d}{dt} \\langle A \\rangle = \\frac{1}{i\\hbar} \\langle [H,A] \\rangle + \\langle \\frac{\\partial A}{\\partial t} \\rangle$$\n",
-    "* Diracs delta: $$\\int_{-\\infty}^{\\infty} e^{ikx} dk = 2\\pi \\delta(k)$$"
+    "* Diracs delta: $$\\int_{-\\infty}^{\\infty} e^{ikx} dk = 2\\pi \\delta(k)$$\n",
+    "* Momentum operator in position space: $$\\hat{p} = -i\\hbar \\frac{\\partial}{\\partial x}$$\n",
+    "* Position operator in momentum space: $$\\hat{x} = i\\hbar \\frac{\\partial}{\\partial p}$$"
    ]
   },
   {
@@ -169,7 +171,7 @@
     "* $m_{min} = \\|m_1 - m_2\\|, \\quad m_{max} = m_1 + m_2$\n",
     "\n",
     "\n",
-    "### Spin oprbit coupling\n",
+    "### Spin orbit coupling\n",
     "\n",
     "* $$\\Delta H =  -\\vec\\mu \\vec{B} $$"
    ]
