--- a/notes/00_cheat_sheet.ipynb
+++ b/notes/00_cheat_sheet.ipynb
@@ -247,7 +247,7 @@
     "### Born Approximation (**WEAK POTENTIALS**)\n",
     "\n",
     "* $$q = \\vec{k}_f - \\vec{k}_i = 2 k \\sin(\\theta/2)$$\n",
-    "* $$f = \\frac{-\\mu}{2\\pi\\hbar^2} \\int_0^{\\infty} V(r) e^{iqr} r^2 dv$$\n",
+    "* $$f = \\frac{-\\mu}{2\\pi\\hbar^2} \\int_v V(r) e^{iqr} d^3r$$\n",
     "* $$\\sigma(\\theta) = |f|^2$$\n",
     "* Spherical potentials: $$f = \\frac{-2\\mu}{\\hbar^2} \\int_0^{\\infty} r V \\sin(qr) dr$$\n",
     "\n",
